--- a/service-locator.csproj
+++ b/service-locator.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
-    <PackageId>Senkel.Services.ServiceLocator</PackageId>
+    <PackageId>Senkel.ServiceLocation</PackageId>
     <Authors>Leonhard Senkel</Authors>
     <Company>Leonhard Senkel</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
