--- a/service-locator.csproj
+++ b/service-locator.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Senkel.ObjectModel.Creation" Version="2.0.1" />
+    <PackageReference Include="Senkel.ObjectModel.Creational" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
