--- a/service-locator.csproj
+++ b/service-locator.csproj
@@ -11,6 +11,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageDescription>A simple implementation of the service locator pattern.</PackageDescription>
     <RepositoryUrl>https://github.com/Leknes/service-locator</RepositoryUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
