--- a/Senkel.Tools.Services.csproj
+++ b/Senkel.Tools.Services.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
-    <PackageId>Senkel.Tools.ServiceLocation</PackageId>
+    <PackageId>Senkel.Tools.Services</PackageId>
     <Authors>Leonhard Senkel</Authors>
     <Company>Leonhard Senkel</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -15,7 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Senkel.ObjectModel.Creational" Version="2.1.2" />
+    <Reference Include="Senkel.Model.Creating">
+      <HintPath>..\..\Model\Creating\bin\Debug\net6.0\Senkel.Model.Creating.dll</HintPath>
+    </Reference>
   </ItemGroup>
-
+ 
 </Project>
