--- a/Senkel.Tools.Services.csproj
+++ b/Senkel.Tools.Services.csproj
@@ -1,23 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <OutputType>Library</OutputType>
     <PackageId>Senkel.Tools.Services</PackageId>
-    <Authors>Leonhard Senkel</Authors>
-    <Company>Leonhard Senkel</Company>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageDescription>A simple implementation of the service locator pattern.</PackageDescription>
-    <RepositoryUrl>https://github.com/Leknes/service-locator</RepositoryUrl>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<RepositoryUrl>https://github.com/Leknes/service-locator</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Senkel.Model.Creating">
-      <HintPath>..\..\Model\Creating\bin\Debug\net6.0\Senkel.Model.Creating.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\Core\Creating\Senkel.Core.Creating.csproj" />
   </ItemGroup>
  
 </Project>
